update code auth
